welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: illegal start of simple pattern
var :String Msg = litMessage();
    ^BDRBuggle:3: error: '=' expected but ';' found.
var :String Msg = litMessage();
                              ^